--- a/data-science.html
+++ b/data-science.html
@@ -71,6 +71,14 @@
   
       
 <!--Begin body here --> 
+<h5><a href='https://apol-recruit.ucsd.edu/JPF02271'>Assistant Professor - Data Science Ethics (JPF02271) - UC San Diego AP On-Line Recruit</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apol-recruit.ucsd.edu/JPF02273'>Associate or Full Professor - Data Science Ethics (JPF02273) - UC San Diego AP On-Line Recruit</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=quP9Vfw7&k=Job&j=ogKsbfwn&__jvst=Employee+Referral&__jvsd=sYnWNfwO&__jvsc=Twitter&bid=nq3DqMwN'>Align Technology Careers - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Moscow, Russian Federation</span></p>
 <p>Posted on:: 2019-11-01</p>
@@ -87,7 +95,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/foundersfactory/d891ee0a-bc0c-43ab-b29b-a5064d802068'>Founders Factory  - Data Scientist (BeRightBack)</a></h5> 
+<h5><a href='https://jobs.lever.co/foundersfactory/d891ee0a-bc0c-43ab-b29b-a5064d802068'>Founders Factory  - Data Scientist (BeRightBack)</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -115,7 +123,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oD88afwN&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nN8nqMwZ'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oD88afwN&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=nN8nqMwZ'>Freedom Financial Network Careers - Senior Data Scientist</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -231,7 +239,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698592425-data-scientist-user-research-lab-'>Ubisoft Data Scientist (user research lab) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698592425-data-scientist-user-research-lab-'>Ubisoft Data Scientist (user research lab) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada  Montreal Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -251,11 +259,11 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/dae/jobs/junior-data-scientist-aiLsW0-O8r6Ae6aKjNoogA'>Junior Data Scientist #0591 job at Stratus Solutions in Springfield, VA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/dae/jobs/junior-data-scientist-aiLsW0-O8r6Ae6aKjNoogA'>Junior Data Scientist #0591 job at Stratus Solutions in Springfield, VA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light">Springfield, VASpringfield, VA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698578064-junior-data-scientist-m-f-'>Ubisoft Junior Data Scientist (M/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698578064-junior-data-scientist-m-f-'>Ubisoft Junior Data Scientist (M/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -297,7 +305,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543439-data-scientist-deep-learning'>Bosch Group Data Scientist ? Deep Learning | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698543439-data-scientist-deep-learning'>Bosch Group Data Scientist ? Deep Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -341,7 +349,7 @@ Customer Lifecycle Management & Behavior Team you will be responsible for?...</p
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://corti.recruitee.com/o/customer-facing-data-scientist'>
+<h5><a href='https://corti.recruitee.com/o/customer-facing-data-scientist'>
       Customer Facing Data Scientist - Corti
     </a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
@@ -378,7 +386,7 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Cincinnati Cincinnati Cincinnati Cincinnati Cincinnati</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/shopstyle/jobs/4491917002'>Job Application for Data Scientist at ShopStyle</a></h5> 
+<h5><a href='https://boards.greenhouse.io/shopstyle/jobs/4491917002'>Job Application for Data Scientist at ShopStyle</a></h5> 
 <p><span class="badge badge-light">San Mateo</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -446,11 +454,11 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://thinkingmachin.es/careers/web-engineer/'>Web Engineer - Thinking Machines Data Science</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thinkingmachin.es/careers/web-engineer/'>Web Engineer - Thinking Machines Data Science</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/invision/jobs/1936086'>Job Application for Senior Data Scientist, Marketing at InVision</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/invision/jobs/1936086'>Job Application for Senior Data Scientist, Marketing at InVision</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -472,14 +480,6 @@ as well as its execution. Develop, maintain and deploy ML & NLP Pipeline and?...
 <hr/>
 <h5><a href='https://jobs.crelate.com/portal/averityteam/job/qpiyjwqrdo3bpij3oafjfk71ic'>Senior Data Scientist ($225k) - HealthTech | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qmQ9Vfw0&k=Job&j=oJzJafwV&__jvst=Employee&__jvsd=swW3ehwv&__jvsc=Twitter&bid=nolYnMwl'>Funding Circle UK Careers - Senior Data Scientist - Model Validation</a></h5> 
-<p><span class="badge badge-light">London, United Kingdom  London</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/sumup/jobs/4499209002'>Job Application for Data Scientist (Anti-Fraud Squad) at SumUp</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
